--- a/07.05.md
+++ b/07.05.md
@@ -1,4 +1,4 @@
-## * ROS2 Foxy 설치강의 - Linux
+## ROS2 Foxy 설치강의 - Linux
 
 ----------------------------
 
@@ -20,7 +20,7 @@ rosdep update
 ```
 
 ----------------------------
-### * ROS2 Foxy 설치
+### ROS2 Foxy 설치
 ```
 locale
 
@@ -53,7 +53,7 @@ sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys F42ED6FBAB17C654
  - docker 에서는 sudo를 제외 동일하게 진행
 
 ----------------------------
-### * Gazebo 11 설치
+### Gazebo 11 설치
 
 ```
 sudo sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list'
@@ -70,4 +70,60 @@ gazebo
 
 ```
 #메인 터미널에서
-```	
+sudo docker run -it --name="설정할 컨테이너 이름" -e DISPLAY=unix$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix:rw --privileged --device=/dev/video0:/dev/video0 <ROS이름>
+xhost+local:docker
+```
+ - 이 과정을 통해 Gazebo실행이 가능하도록 할 수 있다.
+
+----------------------------
+### 추가 패키지
+```
+sudo apt install ros-foxy-rqt*
+sudo apt install ros-foxy-image-view
+sudo apt install ros-foxy-navigation2 ros-foxy-nav2-bringup 
+sudo apt install ros-foxy-joint-state-publisher-gui
+sudo apt install ros-foxy-xacro
+```
+---------------------------
+### 개발환경 Setup
+#### Colcon Build system
+```
+sudo apt update
+sudo apt install python3-colcon-common-extensions
+```
+#### workspace 생성
+```
+source /opt/ros/foxy/setup.bash
+
+mkdir -p ~/gcamp_ros2_ws/src
+cd ~/gcamp_ros2_ws/src
+
+mkdir -p ~/test_ros2_ws/src
+cd ~/test_ros2_ws/src
+
+# 튜토리얼 패키지
+git clone https://github.com/ros/ros_tutorials.git -b foxy-devel
+
+# 종속성 확인을 위한 CLI 명령어
+cd../
+rosdep install -i --from-path src --rosdistro foxy -y
+
+# colcon 빌드
+colcon build --symlink-install
+```
+
+#### ~/.bashrc 수정
+```
+alias eb='gedit ~/.bashrc'
+alias sb='source ~/.bashrc'
+
+alias cba='colcon build --symlink-install'
+alias cbp='colcon build --symlink-install --packages-select'
+alias killg='killall -9 gzserver && killall -9 gzclient && killall -9 rosmaster'
+
+#자신이 사용할 폴더 이름 작성
+alias rosfoxy='source /opt/ros/foxy/setup.bash && source ~/gcamp_ros2_ws/install/local_setup.bash'
+
+source /usr/share/colcon_cd/function/colcon_cd.sh
+export _colcon_cd_root=~/gcamp_ros2_ws
+```
