--- a/07.07.md
+++ b/07.07.md
@@ -11,7 +11,7 @@
 
  - powershell 터미널에서 쉽게 프로그램 설치가 가능한 `chocolatey` 를 설치해준다.
  - 모든 설치과정은 **관리자 권한**으로 진행한다.
-```
+```powershell
 Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
 
 # Powershell 재시작 이후 설치 확인
