--- a/07.07.md
+++ b/07.07.md
@@ -11,23 +11,27 @@
 
  - powershell 터미널에서 쉽게 프로그램 설치가 가능한 `chocolatey` 를 설치해준다.
  - 모든 설치과정은 **관리자 권한**으로 진행한다.
+
 ```powershell
 Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
 
 # Powershell 재시작 이후 설치 확인
 choco
 ```
+
 -------------------------------
 ### Windows Terminal
  - 다양한 터미널 프로그램들을 쉽게 사용할 수 있게 해주고, Linux 의 terminator과 같이 화면 분할 기능 또한 있다.
-```
+
+```powershell
 choco install -y microsoft-windows-terminal
 ```
+
 -------------------------------
 ### 다양한 프로그램 설치
  - 이제 Powershell에서 Terminal로 변환한다. 후 설치 진행한다.
 
-```
+```powershell
 # python
 choco install -y python --version 3.8.3
 
@@ -51,7 +55,7 @@ choco install -y vcredist2010 vcredist2013 vcredist140
 
  - 설치 이후에는
 
-```
+```powershell
 setx -m OPENSSL_CONF "C:\Program Files\OpenSSL-Win64\bin\openssl.cfg"
 # 성공이 출력되는지 확인
 ```
@@ -62,7 +66,7 @@ setx -m OPENSSL_CONF "C:\Program Files\OpenSSL-Win64\bin\openssl.cfg"
  - https://visualstudio.microsoft.com/ko/vs/older-downloads/
  - 설치 후 반드시 C++를 사용한 데스크탑 개발을 선택하여 패키지 설치
 
-```
+```powershell
 # CMake
 choco install -y cmake
 ```
@@ -75,7 +79,7 @@ choco install -y cmake
  - https://github.com/ros2/choco-packages/releases/tag/2020-02-24
  - 위 링크에서 log4cxx.0.10.0-2.nupkg를 제외한 나머지 파일을 한 폴더에 저장
 
-```
+```powershell
 # 추가 종속성 설치
 choco install -y -s <다운로드 위치> asio cunit eigen tinyxml-usestl tinyxml2 log4cxx bullet
 
@@ -95,7 +99,7 @@ choco install graphviz
 
  - 환경변수에 **C:\opencv\x64\vc16\bin** 추가
 
-```
+```powershell
 #OpenCV 전용 환경변수 추가
 setx -m OpenCV_DIR C:\opencv
 ```
@@ -103,7 +107,7 @@ setx -m OpenCV_DIR C:\opencv
 ------------------------------
 ### ROS2 설치
 
-```
+```powershell
 set ChocolateyInstall=c:\opt\chocolatey
 choco source add -n=ros-win -s="https://aka.ms/ros/public" --priority=1
 choco upgrade ros-foxy-desktop -y --execution-timeout=0
@@ -112,7 +116,7 @@ choco upgrade ros-foxy-desktop -y --execution-timeout=0
  - 이후 재부팅
 
  - x64 Native Tools Command를 사용하여 다음 진행
-```
+```powershell
 # colcon build
 c:\opt\ros\foxy\x64\setup.bat
 mkdir c:\gcamp_ros2_ws\src
@@ -140,7 +144,7 @@ c:\gcamp_ros2_ws>colcon build --symlink-install --packages-select gcamp_gazebo
 
  - Windows terminal에서 진행
 
-```
+```powershell
 setx -m HOME C:\gcamp_ros2_ws
 setx -m HOMEPATH C:\gcamp_ros2_ws
 setx -m GAZEBO_MASTER_URI http://localhost:11345
