--- a/07.09.md
+++ b/07.09.md
@@ -39,4 +39,4 @@ ros2 pkg create --build-type ament_cmake  <Package-name> --dependencies rclcpp <
 ros2 pkg create --build-type ament_python <Package-name> --dependencies rclpy <dependencies> 
 ```
 
- - 이후, `cba`(colcon build all) 혹은 'cbp'(colcon build package)를 통해 빌드를 하면 build 폴더로 바로가기가 생성된다.
+ - 이후, `cba`(colcon build all) 혹은 `cbp`(colcon build package)를 통해 빌드를 하면 build 폴더로 바로가기가 생성된다.
