--- a/07.13.md
+++ b/07.13.md
@@ -16,3 +16,6 @@ ros2 topic info
 # 특정 메세지의 구성 확인
 ros2 interface show
 ```
+
+ - rqt graph 에서 topic - topic monitor에서 토픽의 정보들을 확인 가능하다.
+ - 그러나, 빠른 속도로 받지는 못하기에 `ros2 topic echo <message 이름>`을 주로 사용하도록 하자
