--- a/07.08.md
+++ b/07.08.md
@@ -30,6 +30,7 @@ ros2 launch gcamp_gazebo gcamp_world.launch.py
 ```
 
  - rosfoxy는 항상 해주는 습관을 가지자
+ - docker run -it -v /tmp/.X11-unix:/tmp/.X11-unix -e DISPLAY=unix$DISPLAY --name <컨테이너명> <> 
  - xhost + local:docker 는 gazebo 실행 전 꼭 해주기 (Docker)
 
 ------------------------
