--- a/07.14/07.14-1.md
+++ b/07.14/07.14-1.md
@@ -73,23 +73,26 @@ class CmdVelPublisher(Node):
         super().__init__('cmd_vel_pub_node')
 
         # Publisher 생성
-        self.publisher = self.create_publisher(
-            Twist, 'skidbot/cmd_vel', 10
-        )
+        self.publisher = self.create_publisher(Twist, 'skidbot/cmd_vel', 10)
 
         # 실행 주기 설정
         timer_period = 0.5
 
-        # 샐행 주기마다 publish_callback 함수 실행
+        # 실행 주기마다 publish_callback 함수 실행
         self.timer = self.create_timer(timer_period, self.publish_callback)
-        self.get_logger().info(
-            'DriveForward node Started, move forward during 5 seconds \n'
-        )
+        self.get_logger().info('DriveForward node Started, move forward during seconds \n' )
 
+    # Call-back 함수
     def publish_callback(self):
+
+        # 메세지 불러옴
         twist_msg = Twist()
+
+        # 선속도와 각속도 설정
         twist_msg.linear.x = 0.5
         twist_msg.angular.z = 1.0
+
+        # 메세지를 Publish 함
         self.publisher.publish(twist_msg)
 
     def stop_robot(self):
@@ -99,4 +102,4 @@ class CmdVelPublisher(Node):
         self.publisher.publish(stop_msg)
 ```
 
-- `create_publisher(<Message Type>, <Topic name>, <Queue>)` 로 Publisher을 생성한다.
+- `create_publisher(<Message Type>, <Topic name>, <Queue>)` 로 Publisher을 생성
