--- a/2022-07-17/2022-07-17_lec10.md
+++ b/2022-07-17/2022-07-17_lec10.md
@@ -7,7 +7,7 @@
 - 모든 Node는 포인터의 형식을 갖는다.
 
 ```C++
-// ROS2의 API인 rlcpp를 include 해줌
+// ROS2의 API인 rclcpp를 include 해줌
 #include "rclcpp/rclcpp.hpp"
 
 int main(int argc, char **argv) {
@@ -162,4 +162,4 @@ int main(int argc, char **argv) {
 
 순으로 코드가 진행된다.
 
-- rclcpp가 종료된 이후 소멸자가 실행된다. 떄문에 왠만하면 Node의 소멸자는 지양하는 것이 좋다.
+- rclcpp가 종료된 이후 소멸자가 실행된다. 때문에 왠만하면 Node의 소멸자는 지양하는 것이 좋다.
