docker 생성부 수정

--- a/2022-07-05/2022-07-05-lec2.md
+++ b/2022-07-05/2022-07-05-lec2.md
@@ -70,7 +70,7 @@ gazebo
 
 ```
 #메인 터미널에서
-sudo docker run -it --name="설정할 컨테이너 이름" -e DISPLAY=unix$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix:rw --privileged --device=/dev/video0:/dev/video0 <ROS이름>
+sudo docker run -it --name="설정할 컨테이너 이름" -e DISPLAY=unix$DISPLAY -e USER=$USER -v /tmp/.X11-unix:/tmp/.X11-unix:rw --privileged --device=/dev/video0:/dev/video0 --net host <ROS이름>
 xhost+local:docker
 ```
  - 이 과정을 통해 Gazebo실행이 가능하도록 할 수 있다.
